--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 20px 20px;
+  padding: 23px 23px;
   display: inline-block;
   cursor: pointer;
   -webkit-transition-property: opacity, -webkit-filter;
@@ -1438,7 +1438,7 @@ section {
   /* Internet Explorer */
   /* Opera < 12.1 */
   animation: fadein 2s;
-  padding: 12.5vw;
+  padding: 16vw;
 }
 
 .content {
@@ -1460,8 +1460,8 @@ section {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-top: 0;
-  margin-left: 12.5vw;
-  margin-right: 12.5vw;
+  margin-left: 16vw;
+  margin-right: 16vw;
   padding-left: 4vw;
   padding-right: 4vw;
   padding-top: 2.5vw;
@@ -1501,8 +1501,8 @@ article {
   font-size: 128px;
   /* color: rgba(255, 255, 255, 0.5); */
   margin-bottom: 0%;
-  margin-left: 12.5vw;
-  margin-right: 12.5vw;
+  margin-left: 16vw;
+  margin-right: 16vw;
   padding-left: 4vw;
   padding-right: 4vw;
   font-weight: bold;
@@ -1529,7 +1529,7 @@ header {
   background: white;
   margin: 0;
   padding: 0;
-  width: 10%;
+  width: 90px;
   height: 100%;
   /* Full height */
   position: fixed;
