--- a/style/style.css
+++ b/style/style.css
@@ -788,14 +788,22 @@
    * Minus
    */
 .hamburger--minus .hamburger-inner::before, .hamburger--minus .hamburger-inner::after {
-  -webkit-transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
-  transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
+  -webkit-transition: bottom 0.08s 0s ease-out,
+ top 0.08s 0s ease-out,
+ opacity 0s linear;
+  transition: bottom 0.08s 0s ease-out,
+ top 0.08s 0s ease-out,
+ opacity 0s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before, .hamburger--minus.is-active .hamburger-inner::after {
   opacity: 0;
-  -webkit-transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
-  transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
+  -webkit-transition: bottom 0.08s ease-out,
+ top 0.08s ease-out,
+ opacity 0s 0.08s linear;
+  transition: bottom 0.08s ease-out,
+ top 0.08s ease-out,
+ opacity 0s 0.08s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before {
@@ -895,8 +903,10 @@
 }
 
 .hamburger--spin .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in,
+ opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in,
+ opacity 0.1s ease-in;
 }
 
 .hamburger--spin .hamburger-inner::after {
@@ -918,8 +928,10 @@
 .hamburger--spin.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out,
+ opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out,
+ opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin.is-active .hamburger-inner::after {
@@ -943,8 +955,10 @@
 }
 
 .hamburger--spin-r .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in,
+ opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in,
+ opacity 0.1s ease-in;
 }
 
 .hamburger--spin-r .hamburger-inner::after {
@@ -966,8 +980,10 @@
 .hamburger--spin-r.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out,
+ opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out,
+ opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin-r.is-active .hamburger-inner::after {
@@ -1203,8 +1219,10 @@
 }
 
 .hamburger--squeeze .hamburger-inner::before {
-  -webkit-transition: top 0.075s 0.12s ease, opacity 0.075s ease;
-  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
+  -webkit-transition: top 0.075s 0.12s ease,
+ opacity 0.075s ease;
+  transition: top 0.075s 0.12s ease,
+ opacity 0.075s ease;
 }
 
 .hamburger--squeeze .hamburger-inner::after {
@@ -1226,8 +1244,10 @@
 .hamburger--squeeze.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.075s ease, opacity 0.075s 0.12s ease;
-  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+  -webkit-transition: top 0.075s ease,
+ opacity 0.075s 0.12s ease;
+  transition: top 0.075s ease,
+ opacity 0.075s 0.12s ease;
 }
 
 .hamburger--squeeze.is-active .hamburger-inner::after {
@@ -1439,7 +1459,7 @@ section {
   /* Internet Explorer */
   /* Opera < 12.1 */
   animation: fadein 2s;
-  padding: 16vw;
+  padding: 14vw;
 }
 
 .content {
@@ -1461,11 +1481,11 @@ section {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-top: 0;
-  margin-left: 16vw;
-  margin-right: 16vw;
+  margin-left: 90px;
+  margin-right: 14vw;
   padding-left: 4vw;
   padding-right: 4vw;
-  padding-top: 2.5vw;
+  padding-top: 0;
   -ms-flex-direction: column;
       flex-direction: column;
   -webkit-transition: 2s;
@@ -1497,13 +1517,13 @@ article {
 #title {
   -webkit-animation: fadein 3s;
   animation: fadein 3s;
-  margin-top: 10vw;
+  margin-top: 0;
   background: rgba(0, 0, 0, 0.5);
-  font-size: 128px;
+  font-size: 10vw;
   /* color: rgba(255, 255, 255, 0.5); */
   margin-bottom: 0%;
-  margin-left: 16vw;
-  margin-right: 16vw;
+  margin-left: 90px;
+  margin-right: 0;
   padding-left: 4vw;
   padding-right: 4vw;
   font-weight: bold;
