--- a/style/style.css
+++ b/style/style.css
@@ -788,22 +788,14 @@
    * Minus
    */
 .hamburger--minus .hamburger-inner::before, .hamburger--minus .hamburger-inner::after {
-  -webkit-transition: bottom 0.08s 0s ease-out,
- top 0.08s 0s ease-out,
- opacity 0s linear;
-  transition: bottom 0.08s 0s ease-out,
- top 0.08s 0s ease-out,
- opacity 0s linear;
+  -webkit-transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
+  transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before, .hamburger--minus.is-active .hamburger-inner::after {
   opacity: 0;
-  -webkit-transition: bottom 0.08s ease-out,
- top 0.08s ease-out,
- opacity 0s 0.08s linear;
-  transition: bottom 0.08s ease-out,
- top 0.08s ease-out,
- opacity 0s 0.08s linear;
+  -webkit-transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
+  transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before {
@@ -903,10 +895,8 @@
 }
 
 .hamburger--spin .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
 }
 
 .hamburger--spin .hamburger-inner::after {
@@ -928,10 +918,8 @@
 .hamburger--spin.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin.is-active .hamburger-inner::after {
@@ -955,10 +943,8 @@
 }
 
 .hamburger--spin-r .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
 }
 
 .hamburger--spin-r .hamburger-inner::after {
@@ -980,10 +966,8 @@
 .hamburger--spin-r.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin-r.is-active .hamburger-inner::after {
@@ -1219,10 +1203,8 @@
 }
 
 .hamburger--squeeze .hamburger-inner::before {
-  -webkit-transition: top 0.075s 0.12s ease,
- opacity 0.075s ease;
-  transition: top 0.075s 0.12s ease,
- opacity 0.075s ease;
+  -webkit-transition: top 0.075s 0.12s ease, opacity 0.075s ease;
+  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
 }
 
 .hamburger--squeeze .hamburger-inner::after {
@@ -1244,10 +1226,8 @@
 .hamburger--squeeze.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.075s ease,
- opacity 0.075s 0.12s ease;
-  transition: top 0.075s ease,
- opacity 0.075s 0.12s ease;
+  -webkit-transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
 }
 
 .hamburger--squeeze.is-active .hamburger-inner::after {
@@ -1469,7 +1449,6 @@ section {
   /* Internet Explorer */
   /* Opera < 12.1 */
   animation: fadein 2s;
-  background: rgba(255, 255, 255, 0.25);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1482,7 +1461,7 @@ section {
           flex-direction: row;
   margin-top: 0;
   margin-left: 90px;
-  margin-right: 14vw;
+  margin-right: 0px;
   padding-left: 4vw;
   padding-right: 4vw;
   padding-top: 0;
@@ -1512,6 +1491,7 @@ article {
   animation: fadein 2s;
   margin-top: 25px;
   margin-bottom: 25px;
+  padding: 60px 100px 60px;
 }
 
 #title {
@@ -1519,7 +1499,7 @@ article {
   animation: fadein 3s;
   margin-top: 0;
   background: rgba(0, 0, 0, 0.5);
-  font-size: 10vw;
+  font-size: 7.5vw;
   /* color: rgba(255, 255, 255, 0.5); */
   margin-bottom: 0%;
   margin-left: 90px;
