--- a/style/style.scss
+++ b/style/style.scss
@@ -148,9 +148,7 @@ section {
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
-    // margin: 0px 0px 0px 90px;
-    padding-right: 4vw;
-    padding-top: 0;
+    margin: 0px 0px 0px 90px;
     flex-direction: column;
     transition: 2s;
     /* background-color: #818181; */
