--- a/style/style.css
+++ b/style/style.css
@@ -1348,47 +1348,6 @@
           transform: rotate(-90deg);
 }
 
-/* content styling */
-html {
-  scroll-behavior: smooth;
-}
-
-/* iframe as background */
-iframe {
-  z-index: -9999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-/* canvas as background */
-/* canvas {
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -9999;
-} */
-::-webkit-scrollbar {
-  display: none;
-}
-
-body {
-  overflow-x: hidden;
-  -webkit-animation: rgb 100000ms infinite;
-          animation: rgb 100000ms infinite;
-  background: -webkit-gradient(linear, right top, left top, from(#0000ff), to(#ff0000));
-  background: linear-gradient(270deg, #0000ff, #ff0000);
-  background-size: 400% 400%;
-  -webkit-animation: AnimationName 12s ease infinite;
-  animation: AnimationName 12s ease infinite;
-}
-
 @-webkit-keyframes AnimationName {
   0% {
     background-position: 88% 0%;
@@ -1413,182 +1372,6 @@ body {
   }
 }
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-body,
-html {
-  margin: 0px;
-  color: white;
-  height: 100%;
-  line-height: 1.8;
-}
-
-section {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  /* Firefox < 16 */
-  /* Internet Explorer */
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-  padding: 14vw;
-}
-
-.content {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  /* Firefox < 16 */
-  /* Internet Explorer */
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  margin: 0px 0px 0px 90px;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  -webkit-transition: 2s;
-  transition: 2s;
-  /* background-color: #818181; */
-  /* align-items: center; */
-}
-
-.content h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-style: italic;
-}
-
-article {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  /* Firefox < 16 */
-  /* Internet Explorer */
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
-
-#title {
-  color: black;
-  margin-top: 0;
-  background: white;
-  font-size: 3vw;
-  /* color: rgba(255, 255, 255, 0.5); */
-  margin-bottom: 0%;
-  margin-left: 30px;
-  margin-right: 0;
-  padding-left: 4vw;
-  padding-right: 4vw;
-  font-weight: bold;
-  font-style: italic;
-  -webkit-transition: 2s;
-  transition: 2s;
-  /* padding-top: 10%; */
-  /* text-align: center; */
-  /* padding: 50px 10px; */
-}
-
-#element {
-  scrollbar-width: none;
-}
-
-/* Header */
-header {
-  /* background: rgba(255, 255, 255, 0.75); */
-  /* background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%); */
-  /* border-bottom: 4px rgb(0, 0, 0) solid; */
-  position: fixed;
-  width: 100%;
-  top: 0;
-  background: white;
-  margin: 0;
-  padding: 0;
-  width: 90px;
-  height: 100%;
-  /* Full height */
-  position: fixed;
-  /* Make it stick, even on scroll */
-  overflow: auto;
-  /* Enable scrolling if the sidenav has too much content */
-}
-
-.headercontainer {
-  /* position: fixed; */
-  padding-left: 0%;
-  padding-right: 0%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.navButton {
-  padding-left: 25px;
-  /* padding-right: 10vw; */
-  -webkit-box-ordinal-group: 1;
-      -ms-flex-order: 0;
-          order: 0;
-  /* position: relative; */
-  /* margin-top: 30px; */
-  font-size: 43px;
-  cursor: pointer;
-  color: rgba(255, 255, 255, 0.5);
-  padding-bottom: 0px;
-  -webkit-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
-
-.navButton:hover {
-  color: white;
-  -webkit-animation: glowing 2500ms infinite;
-          animation: glowing 2500ms infinite;
-}
-
-.logo {
-  /* padding-right: 20px; */
-  padding-right: 20px;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-  /* font-color: white; */
-}
-
-.headerplaceholder {
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
-}
-
-/* Keyframes */
 /* Fade in */
 @keyframes fadein {
   from {
@@ -1684,6 +1467,199 @@ header {
   100% {
     background: #0000FF;
   }
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* iframe as background */
+iframe {
+  z-index: -9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* canvas as background */
+/* canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -9999;
+} */
+body {
+  overflow-x: hidden;
+  -webkit-animation: rgb 100000ms infinite;
+          animation: rgb 100000ms infinite;
+  background: -webkit-gradient(linear, right top, left top, from(#0000ff), to(#ff0000));
+  background: linear-gradient(270deg, #0000ff, #ff0000);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 12s ease infinite;
+  animation: AnimationName 12s ease infinite;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+body,
+html {
+  margin: 0px;
+  color: white;
+  height: 100%;
+  line-height: 1.8;
+}
+
+.content {
+  -webkit-animation: fadein 2s;
+  animation: fadein 2s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 0px 0px 0px 90px;
+  padding: 82.5px 3.5vw 0 3.5vw;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -webkit-transition: 2s;
+  transition: 2s;
+  /* align-items: center; */
+}
+
+article {
+  -webkit-animation: fadein 2s;
+  animation: fadein 2s;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+#title {
+  /* color: rgba(255, 255, 255, 0.5); */
+  /* padding-top: 10%; */
+  /* text-align: center; */
+  /* padding: 50px 10px; */
+  position: fixed;
+  height: 96.25px;
+  width: 100%;
+  color: black;
+  margin: 0px 0px 0px 90px;
+  background: white;
+  font-size: 55px;
+  padding-left: 5px;
+  font-weight: bold;
+  font-style: italic;
+  -webkit-transition: 2s;
+  transition: 2s;
+}
+
+section {
+  -webkit-animation: fadein 2s;
+  /* Safari, Chrome and Opera > 12.1 */
+  /* Firefox < 16 */
+  /* Internet Explorer */
+  /* Opera < 12.1 */
+  animation: fadein 2s;
+  padding: 14vw;
+}
+
+#element {
+  scrollbar-width: none;
+}
+
+/* Header */
+header {
+  background: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  width: 90px;
+  height: 100%;
+  position: fixed;
+  /* Make it stick, even on scroll */
+  overflow: auto;
+  /* Enable scrolling if the sidenav has too much content */
+}
+
+.headercontainer {
+  /* position: fixed; */
+  padding-left: 0%;
+  padding-right: 0%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navButton {
+  /* position: relative; */
+  /* margin-top: 30px; */
+  /* padding-right: 10vw; */
+  padding-left: 25px;
+  -webkit-box-ordinal-group: 1;
+      -ms-flex-order: 0;
+          order: 0;
+  font-size: 43px;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.5);
+  padding-bottom: 0px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.navButton:hover {
+  color: white;
+  -webkit-animation: glowing 2500ms infinite;
+          animation: glowing 2500ms infinite;
+}
+
+.logo {
+  /* padding-right: 20px; */
+  /* font-color: white; */
+  padding-right: 20px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.headerplaceholder {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
 /* Off-canvas menu */
