--- a/style/hamburgers.css
+++ b/style/hamburgers.css
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 23px 23px;
+  padding: 19px 23px;
   display: inline-block;
   cursor: pointer;
   -webkit-transition-property: opacity, -webkit-filter;
@@ -27,17 +27,17 @@
 }
 
 .hamburger:hover {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .hamburger.is-active:hover {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-  background-color: black;
+  background-color: #fff;
 }
 
 .hamburger-box {
@@ -56,7 +56,7 @@
 .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
   width: 45px;
   height: 4px;
-  background-color: black;
+  background-color: #fff;
   border-radius: 4px;
   position: absolute;
   -webkit-transition-property: -webkit-transform;
