--- a/style/hamburgers.scss
+++ b/style/hamburgers.scss
@@ -10,13 +10,13 @@
 // Settings
 // ==================================================
 $hamburger-padding-x           : 23px !default;
-$hamburger-padding-y           : 23px !default;
+$hamburger-padding-y           : 19px !default;
 $hamburger-layer-width         : 45px !default;
 $hamburger-layer-height        : 4px !default;
 $hamburger-layer-spacing       : 7px !default;
-$hamburger-layer-color         : rgb(0, 0, 0) !default;
+$hamburger-layer-color         : #fff !default;
 $hamburger-layer-border-radius : 4px !default;
-$hamburger-hover-opacity       : 0.7 !default;
+$hamburger-hover-opacity       : 1 !default;
 $hamburger-active-layer-color  : $hamburger-layer-color !default;
 $hamburger-active-hover-opacity: $hamburger-hover-opacity !default;
 
