--- a/style/style.css
+++ b/style/style.css
@@ -1593,6 +1593,15 @@ header {
           align-items: center;
 }
 
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: rgba(255, 255, 255, 0.25);
+  text-align: center;
+}
+
 .navButton {
   /* position: relative; */
   /* margin-top: 30px; */
