--- a/style/style.scss
+++ b/style/style.scss
@@ -162,8 +162,8 @@ $headerHeight: 68px;
 
 html {
     scroll-behavior: smooth;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-    // hide scrollbar on IE
+    -ms-overflow-style: -ms-autohiding-scrollbar;// hide scrollbar on IE
+    scrollbar-width: none; // disable scrollbar on mf
 }
 
 // hide scrollbar on chrome
@@ -296,6 +296,8 @@ section {
 
 /* Header */
 header {
+    scrollbar-width: none; // disable header scrollbar bug on mf
+
     // background: rgba(255, 255, 255, 0.75);
     // background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%);
     // border-bottom: 4px rgb(0, 0, 0) solid;
@@ -325,12 +327,16 @@ header {
 }
 
 footer {
+    z-index: -10;
     position: fixed;
     left: 0;
     bottom: 0;
+    // top: 0;
+    // right: 0;
     width: 100%;
+    height: 60%;
     // background-color: red;
-    color: rgba(255, 255, 255, 0.25);
+    color: rgba(255, 255, 255, 0.4);
     text-align: center;
 }
 
