--- a/style/style.css
+++ b/style/style.css
@@ -1493,6 +1493,11 @@ html {
   line-height: 1.8;
 }
 
+embed {
+  width: 100%;
+  height: 700px;
+}
+
 #title {
   z-index: 1;
   /* color: rgba(255, 255, 255, 0.5); */
@@ -1513,6 +1518,8 @@ html {
 .content {
   -webkit-animation: fadein 2s;
   animation: fadein 2s;
+  -webkit-box-shadow: 0px 15px 30px black;
+          box-shadow: 0px 15px 30px black;
   background: rgba(255, 255, 255, 0.75);
   color: black;
   display: -webkit-box;
@@ -1526,7 +1533,7 @@ html {
       -ms-flex-direction: row;
           flex-direction: row;
   margin: 70px 90px 0px 90px;
-  padding: 60px 3.5vw 0 3.5vw;
+  padding: 0 5vw 0 5vw;
   -ms-flex-direction: column;
       flex-direction: column;
   -webkit-transition: 2s;
@@ -1539,11 +1546,29 @@ html {
   overflow-x: hidden;
 }
 
+.feedback {
+  padding: 1px 20px 20px;
+  background: rgba(0, 0, 0, 0.5);
+  margin: 10px 0px 10px;
+  color: white;
+}
+
+.feedbackThumbnail {
+  height: 40px;
+  width: 40px;
+  background-color: white;
+  border-radius: 50%;
+  float: left;
+}
+
+.contentAttachment {
+  max-width: 100%;
+  height: auto;
+}
+
 article {
   -webkit-animation: fadein 2s;
   animation: fadein 2s;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 
 section {
