--- a/style/style.scss
+++ b/style/style.scss
@@ -162,7 +162,7 @@ $headerHeight: 68px;
 
 html {
     scroll-behavior: smooth;
-    -ms-overflow-style: -ms-autohiding-scrollbar;// hide scrollbar on IE
+    -ms-overflow-style: -ms-autohiding-scrollbar; // hide scrollbar on IE
     scrollbar-width: none; // disable scrollbar on mf
 }
 
@@ -216,6 +216,8 @@ html {
     line-height: 1.8;
 }
 
+embed{width: 100%; height: 700px;}
+
 #title {
     z-index: 1;
     /* color: rgba(255, 255, 255, 0.5); */
@@ -242,6 +244,8 @@ html {
     -o-animation: fadein 2s;
     animation: fadein 2s;
 
+    box-shadow: 0px 15px 30px black;
+
     background: rgba(255, 255, 255, 0.75);
     color: black;
 
@@ -249,7 +253,7 @@ html {
     justify-content: flex-start;
     flex-direction: row;
     margin: $titleSize*1.75 $headerPadding 0px $headerPadding;
-    padding: $titleSize*1.5 3.5vw 0 3.5vw;
+    padding: 0 5vw 0 5vw;
     // margin-top: $titleSize;
     // height:50%;
     flex-direction: column;
@@ -257,10 +261,39 @@ html {
     /* align-items: center; */
 
     top: 0;
-    bottom:0;
-    position:fixed;
-    overflow-y:scroll;
-    overflow-x:hidden;
+    bottom: 0;
+    position: fixed;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.feedback {
+    padding: 1px 20px 20px;
+    background: rgba(0, 0, 0, 0.5);
+    margin: 10px 0px 10px;
+    color: white;
+}
+
+.feedbackThumbnail {
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    border-radius: 50%;
+    float: left;
+    // margin-top: 15px;
+    // margin-left: 100px;
+    // margin-right: 20px;
+}
+
+.contentAttachment {
+    // width: 100vw;
+    // position: relative;
+    // left: 50%;
+    // right: 50%;
+    // margin-left: -50vw;
+    // margin-right: -50vw;
+    max-width: 100%;
+    height: auto;
 }
 
 // .content h1,
@@ -278,9 +311,6 @@ article {
     -ms-animation: fadein 2s;
     -o-animation: fadein 2s;
     animation: fadein 2s;
-
-    margin-top: 25px;
-    margin-bottom: 25px;
 }
 
 section {
