--- a/style/style.scss
+++ b/style/style.scss
@@ -237,7 +237,7 @@ embed{width: 100%; height: 700px;}
     transition: 3s;
 }
 
-.content {
+#content {
     -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
     -ms-animation: fadein 2s;
