--- a/style/style.css
+++ b/style/style.css
@@ -788,22 +788,14 @@
    * Minus
    */
 .hamburger--minus .hamburger-inner::before, .hamburger--minus .hamburger-inner::after {
-  -webkit-transition: bottom 0.08s 0s ease-out,
- top 0.08s 0s ease-out,
- opacity 0s linear;
-  transition: bottom 0.08s 0s ease-out,
- top 0.08s 0s ease-out,
- opacity 0s linear;
+  -webkit-transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
+  transition: bottom 0.08s 0s ease-out, top 0.08s 0s ease-out, opacity 0s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before, .hamburger--minus.is-active .hamburger-inner::after {
   opacity: 0;
-  -webkit-transition: bottom 0.08s ease-out,
- top 0.08s ease-out,
- opacity 0s 0.08s linear;
-  transition: bottom 0.08s ease-out,
- top 0.08s ease-out,
- opacity 0s 0.08s linear;
+  -webkit-transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
+  transition: bottom 0.08s ease-out, top 0.08s ease-out, opacity 0s 0.08s linear;
 }
 
 .hamburger--minus.is-active .hamburger-inner::before {
@@ -903,10 +895,8 @@
 }
 
 .hamburger--spin .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
 }
 
 .hamburger--spin .hamburger-inner::after {
@@ -928,10 +918,8 @@
 .hamburger--spin.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin.is-active .hamburger-inner::after {
@@ -955,10 +943,8 @@
 }
 
 .hamburger--spin-r .hamburger-inner::before {
-  -webkit-transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
-  transition: top 0.1s 0.25s ease-in,
- opacity 0.1s ease-in;
+  -webkit-transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
+  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
 }
 
 .hamburger--spin-r .hamburger-inner::after {
@@ -980,10 +966,8 @@
 .hamburger--spin-r.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
-  transition: top 0.1s ease-out,
- opacity 0.1s 0.12s ease-out;
+  -webkit-transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
+  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
 }
 
 .hamburger--spin-r.is-active .hamburger-inner::after {
@@ -1219,10 +1203,8 @@
 }
 
 .hamburger--squeeze .hamburger-inner::before {
-  -webkit-transition: top 0.075s 0.12s ease,
- opacity 0.075s ease;
-  transition: top 0.075s 0.12s ease,
- opacity 0.075s ease;
+  -webkit-transition: top 0.075s 0.12s ease, opacity 0.075s ease;
+  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
 }
 
 .hamburger--squeeze .hamburger-inner::after {
@@ -1244,10 +1226,8 @@
 .hamburger--squeeze.is-active .hamburger-inner::before {
   top: 0;
   opacity: 0;
-  -webkit-transition: top 0.075s ease,
- opacity 0.075s 0.12s ease;
-  transition: top 0.075s ease,
- opacity 0.075s 0.12s ease;
+  -webkit-transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
 }
 
 .hamburger--squeeze.is-active .hamburger-inner::after {
@@ -1513,20 +1493,9 @@ html {
   line-height: 1.8;
 }
 
-<<<<<<< HEAD
 embed {
   width: 100%;
   height: 700px;
-=======
-section {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  /* Firefox < 16 */
-  /* Internet Explorer */
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-  padding: 14vw;
->>>>>>> master
 }
 
 #title {
@@ -1563,17 +1532,8 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-<<<<<<< HEAD
   margin: 70px 90px 0px 90px;
   padding: 0 5vw 0 5vw;
-=======
-  margin-top: 0;
-  margin-left: 90px;
-  margin-right: 14vw;
-  padding-left: 4vw;
-  padding-right: 4vw;
-  padding-top: 0;
->>>>>>> master
   -ms-flex-direction: column;
       flex-direction: column;
   -webkit-transition: 2s;
@@ -1618,33 +1578,7 @@ section {
   /* Internet Explorer */
   /* Opera < 12.1 */
   animation: fadein 2s;
-<<<<<<< HEAD
   padding: 14vw;
-=======
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
-
-#title {
-  -webkit-animation: fadein 3s;
-  animation: fadein 3s;
-  margin-top: 0;
-  background: rgba(0, 0, 0, 0.5);
-  font-size: 10vw;
-  /* color: rgba(255, 255, 255, 0.5); */
-  margin-bottom: 0%;
-  margin-left: 90px;
-  margin-right: 0;
-  padding-left: 4vw;
-  padding-right: 4vw;
-  font-weight: bold;
-  font-style: italic;
-  -webkit-transition: 2s;
-  transition: 2s;
-  /* padding-top: 10%; */
-  /* text-align: center; */
-  /* padding: 50px 10px; */
->>>>>>> master
 }
 
 #element {
