--- a/style/style.css
+++ b/style/style.css
@@ -1533,7 +1533,7 @@ embed {
       -ms-flex-direction: row;
           flex-direction: row;
   margin: 0 90px 0px 90px;
-  padding: 1vw 5vw 1vw 5vw;
+  padding: 2vw 5vw 2vw 5vw;
   -ms-flex-direction: column;
       flex-direction: column;
   -webkit-transition: 2s;
@@ -1546,11 +1546,11 @@ embed {
   overflow-y: hidden;
 }
 
-.learningOutcome {
+#learningOutcome {
   -webkit-animation: fadein 1s;
   animation: fadein 1s;
   margin: 0px 90px 0px 90px;
-  padding: 1vw 5vw 1vw 5vw;
+  padding: 2vw 5vw 2vw 5vw;
   background: rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 30px black;
           box-shadow: 0px 0px 30px black;
@@ -1562,7 +1562,7 @@ embed {
   -webkit-animation: fadein 1s;
   animation: fadein 1s;
   margin: 0px 90px 0px 90px;
-  padding: 1vw 5vw 1vw 5vw;
+  padding: 2vw 5vw 2vw 5vw;
   background: blue;
   -webkit-box-shadow: 0px 0px 30px blue;
           box-shadow: 0px 0px 30px blue;
@@ -1572,6 +1572,13 @@ embed {
 .feedback {
   padding: 1px 20px 20px;
   background: rgba(0, 0, 0, 0.5);
+  margin: 10px 0px 10px;
+  color: white;
+}
+
+.contentPlaceholder {
+  padding: 1px 20px 20px;
+  background: rgba(255, 255, 255, 0.5);
   margin: 10px 0px 10px;
   color: white;
 }
@@ -1719,7 +1726,9 @@ footer {
 }
 
 @media only screen and (max-width: 40em) {
-  #content {
+  #content,
+  #learningOutcome,
+  .contentDivider {
     margin: 0px;
     padding: 0px;
   }
