--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,8 @@
 @import "hamburgers";
 $titleBgColour: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 1) 100%);
 $headerPadding: 90px;
-// $titleSize: 40px;
-$titleSize: 8vw;
+$titleSize: 40px;
+// $titleSize: 8vw;
 $headerHeight: 68px;
 $varWidth: 14vw;
 $contentPadding: 2vw 5vw 2vw 5vw;
@@ -225,25 +225,28 @@ embed {
 }
 
 #title {
-    // position: fixed;
-    z-index: 1;
-    /* color: rgba(255, 255, 255, 0.5); */
-    /* padding-top: 10%; */
-    /* text-align: center; */
-    /* padding: 50px 10px; */
-    // position: fixed;
-    height: $titleSize*1.75;
-    width: 100%;
-    // color: black;
-    // margin: 0px 0px 0px $headerPadding;
-    // background: $bgColour;
-    font-size: $titleSize;
-    // padding-left: 5px;
+    -webkit-animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -ms-animation: fadein 1s;
+    -o-animation: fadein 1s;
+    animation: fadein 1s;
+    transition: 3s;
+
+    margin: 0px $headerPadding 0px $headerPadding;
+    padding: $contentPadding;
+    background: rgba(0, 0, 255, 1);
+    box-shadow: 0px 0px 30px blue;
+    color: white;
+
+    // height: $titleSize*1.75;
+    // width: 100%;
+    font-size: 40px;
     font-weight: bold;
     font-style: italic;
-    transition: 3s;
-    text-align: center
+    // text-align: center;
 }
+
+.titleText{margin: 25px;font-size: 1px;}
 
 #content {
     // height: 200px;
@@ -252,7 +255,7 @@ embed {
     // position: relative;
     // overflow-y: hidden;
 
-    z-index: 3;
+    // z-index: 3;
 
     -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
@@ -295,6 +298,7 @@ embed {
     -ms-animation: fadein 1s;
     -o-animation: fadein 1s;
     animation: fadein 1s;
+    transition: 2s;
 
     margin: 0px $headerPadding 0px $headerPadding;
     padding: $contentPadding;
@@ -304,17 +308,17 @@ embed {
 }
 
 .contentDivider {
-    z-index: 0;
     -webkit-animation: fadein 1s;
     -moz-animation: fadein 1s;
     -ms-animation: fadein 1s;
     -o-animation: fadein 1s;
     animation: fadein 1s;
+    transition: 1.5s;
 
     margin: 0px $headerPadding 0px $headerPadding;
     padding: $contentPadding;
-    background: rgba(0, 0, 255, 1);
-    box-shadow: 0px 0px 30px blue;
+    background: rgba(150, 150, 150, 0.75);
+    box-shadow: 0px 0px 30px black;
     color: white;
 }
 
@@ -354,15 +358,6 @@ embed {
     height: auto;
 }
 
-// .content h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//     font-style: italic;
-// }
-
 article {
     -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
@@ -390,12 +385,13 @@ section {
 
 /* Header */
 header {
+    z-index: 1;
     scrollbar-width: none; // disable header scrollbar bug on mf
     // background: rgba(255, 255, 255, 0.75);
     // background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%);
     // border-bottom: 4px rgb(0, 0, 0) solid;
     // padding-top: 0px;
-    z-index: 1;
+    
     // background: $titleBgColour;
     position: fixed;
     width: 100%;
@@ -467,41 +463,16 @@ footer {
     color: #818181;
 }
 
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
     transition: margin-left .5s;
     /* padding: 20px; */
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-
-    .sidenav a {
-        font-size: 18px;
-    }
-
-}
-
 // Fit content to smaller screens
 @media only screen and (max-width: 40em) {
-
     #content,
-    #learningOutcome,
-    .contentDivider {
+    #learningOutcome, #title, .contentDivider, .titleText{
         margin: 0px;
-        padding: 0px;
     }
-
 }
